// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fixtures > ./fixtures/basic.vue 1`] = `
"<script setup lang=\\"ts\\">
 const __MACROS__root_emit = defineEmits(['foo'])

import { expectTypeOf } from 'expect-type'

const foo = (payload) => __MACROS__root_emit('foo', payload)

expectTypeOf(foo).toEqualTypeOf<() => void>()

</script>

<template>
  <div></div>
</template>
"
`;

exports[`fixtures > ./fixtures/detalhed.vue 1`] = `
"<script setup lang=\\"ts\\">
 const __MACROS__root_emit = defineEmits({
    foo: (payload) => typeof payload === 'string'
  })

import { expectTypeOf } from 'expect-type'

const foo = (payload) => __MACROS__root_emit('foo', payload)

expectTypeOf(foo).toEqualTypeOf<(payload: string) => void>()

</script>

<template>
  <div></div>
</template>
"
`;
